[tool.poetry]
name = "dbt-doris"
version = "0.1.0"
description = "The doris adapter plugin for dbt"
authors = ["long2ice <long2ice@gmail.com>"]
include = ["dbt/include/*.sql", "dbt/include/*.yml", "dbt/include/*.md"]
packages = [
    { include = "dbt" },
]

[tool.poetry.dependencies]
python = "^3.7"
dbt-core = "*"
mysqlclient = "*"

[tool.poetry.dev-dependencies]
# Test tools
coveralls = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-dbt-adapter = "^0.6.0"
# Linter tools
mypy = "*"
flake8 = "*"
flake8-comprehensions = "*"
pyproject-flake8 = "*"
darglint = "*"
pylint = "*"
pygments = "*"
bandit = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38", "py39"]

[tool.flake8]
ignore = "E501,W503,DAR101,DAR201,DAR402"
max-line-length = 100

[tool.mypy]
pretty = true
ignore_missing_imports = true
