# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[tool.poetry]
name = "dbt-doris"
version = "0.1.0"
description = "The doris adapter plugin for dbt"
authors = ["long2ice <long2ice@gmail.com>"]
include = ["dbt/include/*.sql", "dbt/include/*.yml", "dbt/include/*.md"]
packages = [
    { include = "dbt" },
]

[tool.poetry.dependencies]
python = "^3.7"
dbt-core = "*"
mysqlclient = "*"

[tool.poetry.dev-dependencies]
# Test tools
coveralls = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-dbt-adapter = "^0.6.0"
# Linter tools
mypy = "*"
flake8 = "*"
flake8-comprehensions = "*"
pyproject-flake8 = "*"
darglint = "*"
pylint = "*"
pygments = "*"
bandit = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38", "py39"]

[tool.flake8]
ignore = "E501,W503,DAR101,DAR201,DAR402"
max-line-length = 100

[tool.mypy]
pretty = true
ignore_missing_imports = true
